src/k8s/infisical/redis/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: infisical-redis-client
spec:
  podSelector:
    matchLabels:
      app: infisical-redis
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infisical
      ports:
        - port: 6379
          protocol: TCP
